--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "accounting": "^0.4.1",
+    "bootstrap-vue": "^2.0.0-rc.2",
     "chunk": "^0.0.2",
     "pluralize": "^7.0.0",
     "vue": "^2.5.13",
