--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "chunk": "^0.0.2",
     "pluralize": "^7.0.0",
     "vue": "^2.5.13",
+    "vue-js-modal": "^1.3.12",
+    "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
